# mavr-multicalc

./: MultiCalculate.py  README.md  old_code.py  pyproject.toml
