[tool.poetry]
name = "mavr-multicalc"
version = "0.0.1"
description = "Utility for multiprocessing phase reconstruction"
authors = ["Anatoly Beskakotov <beskakotov.as@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
